# AoC2022-day13-optimization-rs

./: Cargo.toml  README.md
assets/: data_excluding_single_number.data  data_only_naive.data  data_only_single_number.data  full_data.data  full_raw.txt  heaptrack.naive-slice_no-pool_orig-repeated.26324.zst  heaptrack.naive-slice_pooled_orig-repeated.25899.zst
benches/: day13_impls.rs
benches/resources/: alternating_deep_nesting  left_longer  long_mixed_lines  right_longer
scripts/: cri_to_gp_data.py  normalized_thrpt_bar_chart.gp  parse_and_plot_data.sh  run_all_benches.sh  thrpt_bar_chart.gp
src/: input_handling_baseline.rs  lib.rs  logos_lex.rs  main.rs  manual_lex.rs  naive.rs  naive_cached.rs  naive_slice.rs  prefix_comp_then_logos_lex.rs  shared.rs  single_pass_prefix_comp_then_logos_lex.rs
